Bug 716215 - nsHTMLEditor::IsEmptyNodeImpl checks if the parent is a form widget instead of the child. r=Ms2ger; sr=ehsan